--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <span id="cognome"></span>
         </div>
         <div class="item">
-            Colore Favorito:
+            Colore Preferito:
             <span id="fav-color"></span>
         </div>
     </div>
